# hawk

./: .gitignore  .gitmodules  .projectile  Cargo.toml  README.md  justfile  package.json  tsconfig.json  vite.config.ts
hawk/: Cargo.toml
hawk-terminal/: Cargo.toml
hawk-terminal/src/: buffers.rs  logger.rs  main.rs  ui.rs  ux.rs
hawk/src/: buffers.rs  build.rs  commands.rs  display.rs  editor.rs  events.rs  lib.rs  logger.rs  util.rs
hawk/src/events/: keymaps.rs
src/: App.module.css  App.tsx  bar.ts  bridge.ts  foo.ts  index.ts  index.tsx  initWindow.ts  log.ts  server.js  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: build.rs  lib.rs  main.rs
