[package]
name = "hawk-terminal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hawk = { path = "../hawk" }

crossterm = "0.22"
# Logging / debugging
log = "0.4.14"
simplelog = "^0.10.0"

# parrallel stuff
num_cpus = "1.13.0"
threadpool = "1.8.1"
crossbeam = "0.8.1"