[package]
name = "hawk"
version = "0.1.0"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
cc="*"

[dependencies]
# data and struct manipulation
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Logging / debugging
log = "0.4.14"
simplelog = "^0.10.0"

# lang tools
tree-sitter = "0.20.1"